tests/paczka1/fuzzy1/68604952.err
Error in line 1: PKdWc S819 89,2
Error in line 6: PKdWc S819 92,3
Error in line 19: gUPzuf6Dsd S819 41,9
Error in line 20: gUPzuf6Dsd A521 86,8
Error in line 11: PKdWc A521 52,8
